package pt.ipp.isep.dei.esoft.project.repository;

import java.io.Serializable;

public class BookingRequestsRepository implements Serializable {
}
