@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction


class BookingRequestFeedbackController {
}


class Repositories{
    - Repositories()
    + getInstance()
    + getBookingRequestRepository()
}

class BookingRequestsRepository{
+getUserRequests()
-getAppointmentRequests()
+sendEmail(Agent agent,Client user)
-usersAppointmentRequestList
}



class BookingRequest{
-agent
-date
-announcement
-status
-Client
+setStatus()
}


class BookingRequestFeedbackUI {
}




BookingRequestFeedbackUI ..> BookingRequestFeedbackController
BookingRequestFeedbackController ..> Repositories
Repositories-->BookingRequestsRepository

BookingRequestsRepository-->BookingRequest
Repositories-->Repositories


BookingRequestFeedbackController..>BookingRequestsRepository


@enduml